--- a/package.json
+++ b/package.json
@@ -7,10 +7,17 @@
     "start": "node mortgageCalc.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+
+  "keywords": [
+    "heroku"
+  ],
   "author": "",
   "license": "ISC",
   "dependencies": {
     "express": "^4.18.1",
     "pug": "^3.0.2"
+  },
+  "engines": {
+    "node":"17.x"
   }
 }
