--- a/package.json
+++ b/package.json
@@ -7,7 +7,6 @@
     "start": "node mortgageCalc.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-
   "keywords": [
     "heroku"
   ],
@@ -15,9 +14,10 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.18.1",
+    "morgan": "^1.10.0",
     "pug": "^3.0.2"
   },
   "engines": {
-    "node":"17.x"
+    "node": "17.x"
   }
 }
